add feature: link resolver
A link may resolve either to a fixed target or to the latest head.

Move TransactionIsolationLevel to mybatis config file.

close #408
close #409